--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    Yes<sub>(exept if you're name starts with an M)</sub>
+    Yes<sub>(exept if you go to choir)</sub>
 </body>
 </html>
