--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    No<sub>(except if you choose to be)</sub>
+    We don't judge<sub>(we really don't)</sub>
 </body>
 </html>
